# git-cz-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  cz.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backend-issue.md  bug_report.md  feature_request.md  refactor-request.md
src/: config.rs  main.rs
