[package]
name = "git-cz-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
inquire = "0.7"
anyhow = "1.0"
dirs = "5.0"
# MEMO: 波かっこはバージョン指定だけではなくて、そのライブラリのオプション機能を細かく設定するための書き方
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
